introduce-BANKCON-meddling-sysfs.patch
A few questions have been flying around about how optimal
our waitstates are for various things including Glamo.

This patch introduces new sysfs nodes

/sys/devices/platform/neo1973-memconfig.0/BANKCON0
...
/sys/devices/platform/neo1973-memconfig.0/BANKCON7

If you cat them you get translated info about bus speed on
that chip select, eg,

# cat /sys/devices/platform/neo1973-memconfig.0/BANKCON1
BANKCON1 = 0x00000A40
 Type = ROM / SRAM
 PMC  = normal (1 data)
 Tacp = 2 clocks
 Tcah = 0 clocks
 Tcoh = 1 clock
 Tacc = 3 clocks
 Tcos = 1 clock
 Tacs = 0 clocks

You can write them in hex too

# echo 0x200 > /sys/devices/platform/neo1973-memconfig.0/BANKCON1

The write format for BANKCON0 - 5 looks like this

 b1..b0   PMC  Page Mode Config
 b3..b2   Tacp Page Mode Access Cycle
 b5..b4   Tcah Address hold after CS deasserted
 b7..b6   Tcoh CS hold after OE deasserted
 b10..b8  Tacc Access Cycle Period
 b12..b11 Tcos CS setup before OE asserted
 b14..b13 Tacs Address setup before CS asserted

BANKCON 6 and 7 have two extra bits

 b16..b15  MT  Memory type (00=ROM/SRAM, 11=DRAM)

If it's ROM/SRAM, the rest of the bits are as described above.
For DRAM

 b1..b0   SCAN Column address number
 b3..b2   RAS to CAS delay

The patch is intended to let people experiement on their own.  But
of course you will crash things for sure if the timing is wrong, and
you can also trash SD Card data if you make Glamo unstable, so remove
it or remount ro first.  Other horrible things are possible, but
because the settings aren't sticky, you should always be able to
recover by either normal reboot usually or at worst NOR boot and then
dfu.  Most likely you will just crash your session and have to reboot
if your settings are bad, but consider yourself warned bad things are
possible. :-)

Signed-off-by: Andy Green <andy@openmoko.com>

--- a/arch/arm/plat-s3c24xx/Makefile
+++ b/arch/arm/plat-s3c24xx/Makefile
@@ -34,4 +34,5 @@ obj-$(CONFIG_MACH_NEO1973)	+= neo1973_version.o \
 				   neo1973_pm_gps.o \
 				   neo1973_pm_bt.o  \
 				   neo1973_shadow.o \
-				   neo1973_pm_resume_reason.o
+				   neo1973_pm_resume_reason.o \
+				   neo1973_memconfig.o
