--- a/arch/arm/mach-omap2/Makefile
+++ b/arch/arm/mach-omap2/Makefile
@@ -74,6 +74,11 @@ obj-$(CONFIG_MACH_OMAP_ZOOM2)		+= board-zoom2.o \
 					   board-ldp-flash.o \
 					   board-zoom2-camera.o \
 					   board-zoom2-wifi.o
+obj-$(CONFIG_MACH_OMAP_ZOOM3)		+= board-zoom2.o \
+					   mmc-twl4030.o \
+					   board-ldp-flash.o \
+					   board-zoom2-camera.o \
+					   board-zoom2-wifi.o
 obj-$(CONFIG_MACH_OMAP_APOLLON)		+= board-apollon.o \
 					   board-apollon-mmc.o	\
 					   board-apollon-keys.o
