omap: 3630: adding dss support for zoom3
added MACH_OMAP_ZOOM3 in kconfig
set DISPC_POL_FREQ register to 0x00033028

Signed-off-by: Vikram Pandita <vikram.pandita@ti.com>
Signed-off-by: Leed Aguilar <leed.aguilar@ti.com>

--- a/drivers/video/omap/Kconfig
+++ b/drivers/video/omap/Kconfig
@@ -14,7 +14,7 @@ config FB_OMAP_LCD_VGA
 
 config FB_OMAP_LCD_WVGA
         bool "Use LCD in VGA mode"
-	depends on ARCH_OMAP34XX && MACH_OMAP_ZOOM2
+	depends on ARCH_OMAP34XX && (MACH_OMAP_ZOOM2 || MACH_OMAP_ZOOM3)
 
 choice
 	depends on FB_OMAP && MACH_OVERO
