omap: 3630: adding wifi support for zoom3
added "|| MACH_OMAP_ZOOM3" in
"config WIFI_CONTROL_FUNC" in the
Kconfig file

Signed-off-by: Vikram Pandita <vikram.pandita@ti.com>

--- a/arch/arm/mach-omap2/Kconfig
+++ b/arch/arm/mach-omap2/Kconfig
@@ -129,7 +129,7 @@ config L2CACHE_OMAP3_DISABLE
 
 config WIFI_CONTROL_FUNC
         bool "Enable WiFi control function abstraction"
-	depends on MACH_OMAP_ZOOM2
+	depends on MACH_OMAP_ZOOM2 || MACH_OMAP_ZOOM3
         help
           Enables Power/Reset/Carddetect function abstraction
 
