omap: 3630: add emmc support in zoom3
Add eMMC support on Zoom3 by enabling the hack for emmc
HC_Broken_eMMC_ZOOM2. This allows the eMMC to work on
zoom3. eMMC is connected to MMC2.

Signed-off-by: Vikram Pandita <vikram.pandita@ti.com>

--- a/drivers/mmc/host/Kconfig
+++ b/drivers/mmc/host/Kconfig
@@ -111,7 +111,7 @@ config OMAP_HS_MMC3
 
 config HC_Broken_eMMC_ZOOM2
         bool "HC_Broken_eMMC support for Zoom2"
-	depends on MMC_OMAP_HS && MACH_OMAP_ZOOM2
+	depends on MMC_OMAP_HS && MACH_OMAP_ZOOM2 || MACH_OMAP_ZOOM3
 	default n
 	help
 	  This selects High capacity eMMC support for Zoom2.
