dss2: fix for off mode break after enabling hdmi/lcd-hdmi switching
1. Fixes the OFF mode break when enabling the HDMI
2. This requires the VPLL2 power down sequence to be moved after the
   DSI_PLL is uninitialized.
3. Switching back to LCD from HDMi requires DSI_PLL to be used for both
   DPI and HDMI. Currently it is not possible to switch between DPLL4
   and DSI_PLL

Signed-off-by: Srinivas Pulukuru <a0868378@ti.com>

--- a/drivers/video/omap2/dss/Kconfig
+++ b/drivers/video/omap2/dss/Kconfig
@@ -53,7 +53,7 @@ config OMAP2_DSS_DSI
 
 config OMAP2_DSS_USE_DSI_PLL
 	bool "Use DSI PLL for PCLK (EXPERIMENTAL)"
-	default n
+	default y
 	depends on OMAP2_DSS_DSI
 	help
 	  Use DSI PLL to generate pixel clock.  Currently only for DPI output.
