--- a/arch/arm/configs/zoom2_defconfig
+++ b/arch/arm/configs/zoom2_defconfig
@@ -502,7 +502,7 @@ CONFIG_WIRELESS_EXT_SYSFS=y
 # CONFIG_MAC80211 is not set
 # CONFIG_WIMAX is not set
 CONFIG_RFKILL=y
-CONFIG_RFKILL_PM=y
+#CONFIG_RFKILL_PM is not set
 # CONFIG_RFKILL_INPUT is not set
 # CONFIG_NET_9P is not set
 
