zoom2: enable uart2 dma mode by default.
This patch enables UART2 DMA mode by default for zoom2,
as Bluetooth uses uart2 and requires dma mode to be enabled
by default.

Signed-off-by: Govindraj R <govindraj.raja@ti.com>

--- a/arch/arm/configs/zoom2_defconfig
+++ b/arch/arm/configs/zoom2_defconfig
@@ -834,7 +834,7 @@ CONFIG_SERIAL_CORE_CONSOLE=y
 CONFIG_SERIAL_OMAP=y
 CONFIG_SERIAL_OMAP_CONSOLE=y
 # CONFIG_SERIAL_OMAP_DMA_UART1 is not set
-# CONFIG_SERIAL_OMAP_DMA_UART2 is not set
+CONFIG_SERIAL_OMAP_DMA_UART2=y
 # CONFIG_SERIAL_OMAP_DMA_UART3 is not set
 CONFIG_UNIX98_PTYS=y
 # CONFIG_DEVPTS_MULTIPLE_INSTANCES is not set
