--- a/arch/arm/plat-omap/Kconfig
+++ b/arch/arm/plat-omap/Kconfig
@@ -264,7 +264,7 @@ config OMAP_DM_TIMER
 choice
 	prompt "Low-level debug console UART"
 	depends on ARCH_OMAP
-	default OMAP_LL_DEBUG_UART1
+	default OMAP_LL_DEBUG_NONE
 
 config OMAP_LL_DEBUG_UART1
 	bool "UART1"
@@ -277,6 +277,9 @@ config OMAP_LL_DEBUG_UART3
 
 config OMAP_LL_DEBUG_UART_EXT
 	bool "UART_EXT"
+
+config OMAP_LL_DEBUG_NONE
+	bool "None"
 
 endchoice
 
