--- a/arch/arm/configs/zoom2_defconfig
+++ b/arch/arm/configs/zoom2_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.29-omap1
-# Wed Oct 21 18:51:57 2009
+# Mon Nov 30 11:06:50 2009
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -212,8 +212,9 @@ CONFIG_OMAP_TICK_GPTIMER=1
 CONFIG_OMAP_DM_TIMER=y
 # CONFIG_OMAP_LL_DEBUG_UART1 is not set
 # CONFIG_OMAP_LL_DEBUG_UART2 is not set
-CONFIG_OMAP_LL_DEBUG_UART3=y
+# CONFIG_OMAP_LL_DEBUG_UART3=y is not set
 # CONFIG_OMAP_LL_DEBUG_UART_EXT is not set
+CONFIG_OMAP_LL_DEBUG_NONE=y
 CONFIG_OMAP_SERIAL_WAKE=y
 # CONFIG_OMAP_PM_NONE is not set
 # CONFIG_OMAP_PM_NOOP is not set
