omap: zoom2: Keep MMC2 disabled by default
Keep MMC2 on Zoom2 disabled by default. The same can be enabled
back through menuconfig.

Signed-off-by: Madhusudhan Chikkature <madhu.cr@ti.com>

--- a/drivers/mmc/host/Kconfig
+++ b/drivers/mmc/host/Kconfig
@@ -111,8 +111,8 @@ config OMAP_HS_MMC3
 
 config HC_Broken_eMMC_ZOOM2
         bool "HC_Broken_eMMC support for Zoom2"
-	depends on MMC_OMAP_HS && MACH_OMAP_ZOOM2 || MACH_OMAP_ZOOM3
-	default n
+	depends on OMAP_HS_MMC2 && MACH_OMAP_ZOOM2 || MACH_OMAP_ZOOM3
+	default y
 	help
 	  This selects High capacity eMMC support for Zoom2.
 	  If you have a Zoom2 board with a broken high capacity eMMC device,
