OMAP3: DSS2: Add HDMI sil9022 Driver to 2.6.32 kernel
1. Added sil9022 driver
2. Added the default selection of HDMI panel in
   android_zoom3_defconfig
3. sil9022 driver is a dpi interface and does not
   use CONFIG_OMAP2_DSS_HDMI macro

Change-Id: Ia9d9cf44852b1c683b0653912c05cb973e15bf28
Signed-off-by: Srinivas Pulukuru <srinivas.pulukuru@ti.com>

--- a/arch/arm/configs/android_zoom3_defconfig
+++ b/arch/arm/configs/android_zoom3_defconfig
@@ -1507,6 +1507,7 @@ CONFIG_FB_OMAP2_NUM_FBS=1
 # CONFIG_LCD_4430SDP is not set
 # CONFIG_PANEL_4430SDP_TAAL is not set
 CONFIG_PANEL_NEC=y
+CONFIG_PANEL_SIL9022=y
 # CONFIG_BACKLIGHT_LCD_SUPPORT is not set
 
 #
