--- a/drivers/video/omap2/displays/Kconfig
+++ b/drivers/video/omap2/displays/Kconfig
@@ -46,4 +46,9 @@ config PANEL_NEC
 	help
 		LCD Panel used in the Zoom board
 
+config PANEL_SIL9022
+	tristate "HDMI interface"
+	help
+		HDMI interface used in the Zoom board
+
 endmenu
