--- a/drivers/usb/otg/Kconfig
+++ b/drivers/usb/otg/Kconfig
@@ -50,7 +50,18 @@ config TWL4030_USB
 	  family chips (including the TWL5030 and TPS659x0 devices).
 	  This transceiver supports high and full speed devices plus,
 	  in host mode, low speed.
+config ISP1301_HOST
+	bool "Philips ISP1301 in Host mode with OMAP3 OHCI"
+	depends on ARCH_OMAP_OTG && (MACH_OMAP_3430SDP || MACH_OMAP_3630SDP)
+	default y
+	help
+	  If you say yes here you get support for the Philips ISP1301
+	  USB-On-The-Go transceiver working with the OMAP3 OHCI controller.
+	  The ISP1301 is used in products including the 3430SDP development
+	  boards for Texas Instruments OMAP3 processors.
 
+	  This driver can also be built as a module.  If so, the module
+	  will be called isp1301_host.
 config NOP_USB_XCEIV
 	tristate "NOP USB Transceiver Driver"
 	select USB_OTG_UTILS
