SYSLINK: Make Syslink Loadable Modules Makefiles
This patch has the makefile changes needed for removing the
circular dependency so that syslink can be loadable modules.
There are corresponding kernel source code changes and userspace
syslink changes needed in conjunction with this change.

Change-Id: Ib150a8ccbb036653f751906b45522190b153a70a
Signed-off-by: Angela Stegmaier <angelabaker@ti.com>

--- a/drivers/dsp/syslink/Kconfig
+++ b/drivers/dsp/syslink/Kconfig
@@ -46,6 +46,12 @@ config  NOTIFY_DUCATI
 	help
  	   Notify Ducati Module 
 
+config MPU_SYSLINK_PLATFORM
+        tristate "Syslink Platform Module"
+        default y
+        help
+          Syslink Platform Module
+
 config MPU_SYSLINK_IPC
         tristate "Syslink IPC Module"
         depends on MPU_BRIDGE_NOTIFY && NOTIFY_DUCATI
