OMAP3: SGX: Enable SGX in android_zoom3_defconfig
Enable the SGX driver by default in the Zoom3 defconfig file.

Change-Id: I4f5e24d82e2fdb71319592b10db2227c9137fcd6
Signed-off-by: Carlos Santa <c-santa@ti.com>

--- a/arch/arm/configs/android_zoom3_defconfig
+++ b/arch/arm/configs/android_zoom3_defconfig
@@ -1442,7 +1442,7 @@ CONFIG_RADIO_ADAPTERS=y
 #
 # Graphics support
 #
-# CONFIG_SGX530 is not set
+CONFIG_SGX530=y
 # CONFIG_VGASTATE is not set
 CONFIG_VIDEO_OUTPUT_CONTROL=m
 CONFIG_FB=y
