ARM: PL310: introuduce spinlock for outer cache calls
Disable CACHE_PL310 option so that a spin-lock is introuduced for all
outer cache calls.

There seems to be race in PL310 register accesses and so needs to be
guarded

Signed-off-by: Vikram Pandita <vikram.pandita@ti.com>
Suggestion-by: Santosh Shilimkar <santosh.shilimkar@ti.com>
Cc: Woodruff, Richard <r-woodruff2@ti.com>

--- a/arch/arm/mm/Kconfig
+++ b/arch/arm/mm/Kconfig
@@ -772,7 +772,7 @@ config CACHE_L2X0
 config CACHE_PL310
 	bool
 	depends on CACHE_L2X0
-	default y if CPU_V7
+	default n if CPU_V7
 	help
 	  This option enables support for the PL310 cache controller.
 
