--- a/arch/arm/configs/android_4430_defconfig
+++ b/arch/arm/configs/android_4430_defconfig
@@ -262,7 +262,7 @@ CONFIG_ARM_THUMB=y
 CONFIG_HAS_TLS_REG=y
 CONFIG_OUTER_CACHE=y
 CONFIG_CACHE_L2X0=y
-CONFIG_CACHE_PL310=y
+#CONFIG_CACHE_PL310 is not set
 CONFIG_ARM_L1_CACHE_SHIFT=5
 CONFIG_ARCH_HAS_BARRIERS=y
 # CONFIG_ARM_ERRATA_430973 is not set
