Zoom3: android_zoom3_defconfig update for BTFM
Enabling the FST support by default in android_zoom3_defconfig,
enabling UINPUT support for AVRCP,enabling the Firmware download support,
disabling the RFKILL PM and WL127x RFKILL support

Change-Id: Ic57dfe8280c28b9226e9532f5616c23fa2051642
Signed-off-by: Bheemsen Kulkarni <x0099674@ti.com>
Signed-off-by: Pavan Savoy <pavan_savoy@ti.com>

--- a/arch/arm/configs/android_zoom3_defconfig
+++ b/arch/arm/configs/android_zoom3_defconfig
@@ -260,6 +260,8 @@ CONFIG_MACH_OMAP_ZOOM3=y
 # CONFIG_MACH_OMAP_3630SDP is not set
 # CONFIG_OMAP3_EMU is not set
 # CONFIG_OMAP3_SDRC_AC_TIMING is not set
+# CONFIG_MACH_OMAP_FST_WL128x is not set
+CONFIG_MACH_OMAP_FST_WL127x=y
 
 #
 # Processor Type
@@ -666,7 +668,7 @@ CONFIG_WIRELESS_EXT_SYSFS=y
 #
 # CONFIG_WIMAX is not set
 CONFIG_RFKILL=y
-CONFIG_RFKILL_PM=y
+# CONFIG_RFKILL_PM is not set
 # CONFIG_RFKILL_INPUT is not set
 # CONFIG_NET_9P is not set
 
@@ -681,7 +683,7 @@ CONFIG_UEVENT_HELPER_PATH="/sbin/hotplug"
 # CONFIG_DEVTMPFS is not set
 CONFIG_STANDALONE=y
 CONFIG_PREVENT_FIRMWARE_BUILD=y
-CONFIG_FW_LOADER=m
+CONFIG_FW_LOADER=y
 CONFIG_FIRMWARE_IN_KERNEL=y
 CONFIG_EXTRA_FIRMWARE=""
 # CONFIG_DEBUG_DRIVER is not set
@@ -813,7 +815,7 @@ CONFIG_VIB_GPIO=y
 # CONFIG_SENSORS_AKM8973 is not set
 CONFIG_SENSORS_AKM8973_AKMD=y
 CONFIG_SENSORS_LIS331DLH=y
-CONFIG_WL127X_RFKILL=y
+# CONFIG_WL127X_RFKILL is not set
 # CONFIG_UID_STAT is not set
 CONFIG_APANIC=y
 CONFIG_APANIC_PLABEL="kpanic"
@@ -1032,7 +1034,7 @@ CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_YEALINK is not set
 # CONFIG_INPUT_CM109 is not set
 # CONFIG_INPUT_TWL4030_PWRBUTTON is not set
-# CONFIG_INPUT_UINPUT is not set
+CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_GPIO=y
 # CONFIG_INPUT_GPIO_ROTARY_ENCODER is not set
 # CONFIG_INPUT_HALLEFFECT_BU52014HV is not set
