OMAP3: enabling WIFI_CONTROL_FUNC for zoom3
enabling WIFI_CONTROL_FUNC in Kconfig for zoom3

Change-Id: I8893781c7281b1e92d12c59c3efea81b0b8e61cb
Signed-off-by: Vishal Mahaveer <vishalm@ti.com>
Acked-by: Leed Aguilar <leed.aguilar@ti.com>

--- a/arch/arm/mach-omap2/Kconfig
+++ b/arch/arm/mach-omap2/Kconfig
@@ -93,7 +93,7 @@ config MACH_OMAP3_PANDORA
 
 config WIFI_CONTROL_FUNC
         bool "Enable WiFi control function abstraction"
-	depends on MACH_OMAP_ZOOM2 || MACH_SHOLES || MACH_OMAP_4430SDP
+	depends on MACH_OMAP_ZOOM2 || MACH_SHOLES || MACH_OMAP_4430SDP || MACH_OMAP_ZOOM3
         help
           Enables Power/Reset/Carddetect function abstraction
 
