--- a/arch/arm/configs/zoom3_defconfig
+++ b/arch/arm/configs/zoom3_defconfig
@@ -193,6 +193,7 @@ CONFIG_ARCH_OMAP3_GP=y
 # CONFIG_OMAP_DEBUG_CLOCKDOMAIN is not set
 CONFIG_OMAP_SMARTREFLEX=y
 # CONFIG_OMAP_SMARTREFLEX_TESTING is not set
+CONFIG_OMAP_SMARTREFLEX_CLASS1P5=y
 CONFIG_OMAP_RESET_CLOCKS=y
 CONFIG_OMAP_BOOT_TAG=y
 CONFIG_OMAP_BOOT_REASON=y
