SGX: Rebase to ED11 DDK 1.5.15.3070
Removed all trailing white spaces
Fixed duplicate entry in Makefile

Change-Id:I0c0ebc75d650826fe658551cd49e08c638dc7992
Signed-off-by: Eric Luong <x0119002@ti.com>
Acked-by: Cemil Azizoglu <c-azizoglu@ti.com>
Acked-by: Gustavo Diaz <gusdp@ti.com>

--- a/drivers/gpu/pvr/Makefile
+++ b/drivers/gpu/pvr/Makefile
@@ -26,7 +26,9 @@ ccflags-y = -DLINUX -D__linux__ -Idrivers/gpu/pvr \
 	-DUSE_PTHREADS \
 	-DSUPPORT_PDUMP_DELAYED_INITPHASE_TERMINATION \
 	-DSUPPORT_SGX \
-	-DCLIENT_DRIVER_DEFAULT_WAIT_RETRIES=50
+	-DCLIENT_DRIVER_DEFAULT_WAIT_RETRIES=50 \
+	-DPVR_LINUX_TIMERS_USING_WORKQUEUES \
+	-DPVR_LINUX_USING_WORKQUEUES
 
 ccflags-$(CONFIG_SGX540) +=  -Idrivers/gpu/pvr/omap4  -Idrivers/gpu/pvr/sgx \
 	-DNO_OMAP_TIMER \
