Zoom3: BTFM board-conn FlexST update
updated Kconfig file for enabling FlexST for
OMAP3+WL127x hardware setup.

Modified Zoom3 SDP board config file to use
newly added Connectivity board config file.

Change-Id: I9662097bd0debb3b43139d4b4d43208bc1903ce6
Signed-off-by: Bheemsen Kulkarni <x0099674@ti.com>
Signed-off-by: Pavan Savoy <pavan_savoy@ti.com>

--- a/arch/arm/mach-omap2/Makefile
+++ b/arch/arm/mach-omap2/Makefile
@@ -135,7 +135,8 @@ obj-$(CONFIG_MACH_OMAP_ZOOM3)		+= board-zoom3.o \
 					   board-zoom2-camera.o \
 					   board-zoom-panel.o \
 					   mmc-twl4030.o \
-					   board-zoom-debugboard.o
+					   board-zoom-debugboard.o \
+					   board-connectivity.o
 obj-$(CONFIG_MACH_OMAP_3630SDP)		+= board-3630sdp.o \
 					   board-zoom-peripherals.o \
 					   board-zoom2-camera.o \
