--- a/arch/arm/mach-omap2/Kconfig
+++ b/arch/arm/mach-omap2/Kconfig
@@ -212,17 +212,15 @@ config OMAP3_SDRC_AC_TIMING
 choice
 	bool "FlexST support"
 	depends on MACH_OMAP_ZOOM2 || MACH_OMAP_ZOOM3 || MACH_OMAP_4430SDP
-	default MACH_OMAP_FST_OMAP4_128x
+	default MACH_OMAP_FST_128x
 	help
 	  FlexST will simplify building images for OMAP3+WL127x, OMAP3+WL128x,
 	  OMAP4+WL127x, OMAP4+WL128x, and other hardware setups.
 
-config MACH_OMAP_FST_OMAP4_128x
-	bool "Enable FlexST for OMAP4+WL128x hardware setup"
-	depends on MACH_OMAP_4430SDP
+config MACH_OMAP_FST_WL128x
+	bool "Enable FlexST for WL128x hardware setup"
 
-config MACH_OMAP_FST_OMAP4_127x
-	bool "Enable FlexST for OMAP4+WL127x hardware setup"
-	depends on MACH_OMAP_4430SDP
+config MACH_OMAP_FST_WL127x
+	bool "Enable FlexST for WL127x hardware setup"
 
 endchoice
