--- a/arch/arm/mach-omap2/Makefile
+++ b/arch/arm/mach-omap2/Makefile
@@ -146,11 +146,11 @@ obj-$(CONFIG_MACH_CM_T35)		+= board-cm-t35.o \
 					   mmc-twl4030.o
 obj-$(CONFIG_MACH_IGEP0020)		+= board-igep0020.o \
 					   mmc-twl4030.o
-obj-$(CONFIG_MMC_EMBEDDED_SDIO)         += board-4430sdp-wifi.o
 
 obj-$(CONFIG_MACH_OMAP_4430SDP)		+= board-4430sdp.o \
 					   board-connectivity.o \
-					   mmc-twl4030.o
+					   mmc-twl4030.o \
+					   board-4430sdp-wifi.o
 
 obj-$(CONFIG_MACH_OMAP3517EVM)     += board-am3517evm.o
 
