OMAP3: Enabling wlan on android_zoom3_defconfig
Enabling CONFIG_WIFI_CONTROL_FUNC, CONFIG_TIWLAN_SDIO,
and CONFIG_MMC_EMBEDDED_SDIO for zoom3

Change-Id: I7f5e41024a68c6425d4ac4101cf3712c29530789
Signed-off-by: Vishal Mahaveer <vishalm@ti.com>
Acked-by: Leed Aguilar <leed.aguilar@ti.com>

--- a/arch/arm/configs/android_zoom3_defconfig
+++ b/arch/arm/configs/android_zoom3_defconfig
@@ -249,7 +249,9 @@ CONFIG_OMAP_PACKAGE_CBP=y
 # CONFIG_MACH_OMAP3EVM is not set
 # CONFIG_MACH_OMAP3517EVM is not set
 # CONFIG_MACH_OMAP3_PANDORA is not set
-# CONFIG_TIWLAN_SDIO is not set
+CONFIG_WIFI_CONTROL_FUNC=y
+CONFIG_TIWLAN_SDIO=y
+CONFIG_TIWLAN_MMC_CONTROLLER=3
 # CONFIG_MACH_OMAP_3430SDP is not set
 # CONFIG_MACH_NOKIA_RX51 is not set
 # CONFIG_MACH_OMAP_ZOOM2 is not set
@@ -1775,7 +1777,7 @@ CONFIG_TWL4030_USB=y
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
 CONFIG_MMC_UNSAFE_RESUME=y
-# CONFIG_MMC_EMBEDDED_SDIO is not set
+CONFIG_MMC_EMBEDDED_SDIO=y
 # CONFIG_MMC_PARANOID_SD_INIT is not set
 
 #
