glamo: Move subdrivers to appropriate directories
Instead of staying in drivers/mfd/glamo, the glamo subdrivers have been moved
to the appropriate directories.
Additionally, config options were renamed as follows:
  * MFD_GLAMO stays the same
  * MFD_GLAMO_MCI becomes MMC_GLAMO
  * MFD_GLAMO_GPIO becomes GPIO_GLAMO
  * MFD_GLAMO_FB becomes FB_GLAMO

--- a/drivers/mfd/Kconfig
+++ b/drivers/mfd/Kconfig
@@ -398,7 +398,14 @@ config LPC_SCH
 	help
 	  LPC bridge function of the Intel SCH provides support for
 	  System Management Bus and General Purpose I/O.
-source "drivers/mfd/glamo/Kconfig"
+
+config MFD_GLAMO
+	bool "Smedia Glamo 336x/337x support"
+	select MFD_CORE
+	help
+	  This enables the core driver for the Smedia Glamo 336x/337x
+	  multi-function device.  It includes irq_chip demultiplex as
+	  well as clock / power management and GPIO support.
 
 endmenu
 
