omap4: es1: Create a KCONFIG entry for es1 version
If your silicon is 4430 ES1.0 then in menuconfig select:
System Type ->  OMAP 4430 ES1.0

This will automatically select these errata associated with es1.0:
ERRATA_OMAP4_AXI2OCP and PL310_ERRATA_588369

The default config is to build the 4430 es2.0

Signed-off-by: Santosh Shilimkar <santosh.shilimkar@ti.com>
Signed-off-by: Vikram Pandita <vikram.pandita@ti.com>

--- a/arch/arm/configs/android_4430_defconfig
+++ b/arch/arm/configs/android_4430_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.32.9
-# Fri Jul  2 09:05:09 2010
+# Fri Jul  2 09:19:20 2010
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -228,8 +228,9 @@ CONFIG_OMAP_PM_NOOP=y
 CONFIG_WIFI_CONTROL_FUNC=y
 CONFIG_TIWLAN_SDIO=y
 CONFIG_TIWLAN_MMC_CONTROLLER=5
+# CONFIG_OMAP4_ES1 is not set
 CONFIG_MACH_OMAP_4430SDP=y
-CONFIG_ERRATA_OMAP4_AXI2OCP=y
+# CONFIG_ERRATA_OMAP4_AXI2OCP is not set
 CONFIG_MACH_OMAP_FST_WL128x=y
 # CONFIG_MACH_OMAP_FST_WL127x is not set
 
@@ -267,7 +268,7 @@ CONFIG_ARCH_HAS_BARRIERS=y
 # CONFIG_ARM_ERRATA_430973 is not set
 # CONFIG_ARM_ERRATA_458693 is not set
 # CONFIG_ARM_ERRATA_460075 is not set
-CONFIG_PL310_ERRATA_588369=y
+# CONFIG_PL310_ERRATA_588369 is not set
 CONFIG_ARM_GIC=y
 CONFIG_COMMON_CLKDEV=y
 
