--- a/arch/arm/mach-omap2/Makefile
+++ b/arch/arm/mach-omap2/Makefile
@@ -102,10 +102,6 @@ obj-$(CONFIG_MACH_OMAP3_PANDORA)	+= board-omap3pandora.o \
 obj-$(CONFIG_MACH_OMAP_3430SDP)		+= board-3430sdp.o \
 					   mmc-twl4030.o
 obj-$(CONFIG_MACH_NOKIA_N8X0)		+= board-n8x0.o
-obj-$(CONFIG_MACH_OMAP_ZOOM2)		+= board-zoom2.o \
-					   mmc-twl4030.o \
-					   board-ldp-flash.o \
-					   board-zoom2-wifi.o
 obj-$(CONFIG_MACH_SHOLES)		+= board-sholes.o \
 					   board-sholes-camera.o \
 					   board-sholes-flash.o \
@@ -125,9 +121,12 @@ obj-$(CONFIG_MACH_NOKIA_RX51)		+= board-rx51.o \
 					   board-rx51-peripherals.o \
 					   mmc-twl4030.o
 obj-$(CONFIG_MACH_OMAP_ZOOM2)		+= board-zoom2.o \
+					   board-zoom-flash.o \
 					   board-zoom-peripherals.o \
 					   board-zoom2-camera.o \
+					   board-zoom-panel.o \
 					   mmc-twl4030.o \
+					   board-zoom2-wifi.o \
 					   board-zoom-debugboard.o
 obj-$(CONFIG_MACH_OMAP_ZOOM3)		+= board-zoom3.o \
 					   board-zoom-flash.o \
