OMAP4: Add sfh7741 proximity sensor
Adds the proximity sensor files and corresponding
menuconfig and kconfig options.

Change-Id: I03bd277d195d6d4d239554100239c35a4fd19d6c
Signed-off-by: Shubhrajyoti D <shubhrajyoti@ti.com>
Acked-by: Axel Haslam <axelhaslam@ti.com>

--- a/drivers/input/misc/Kconfig
+++ b/drivers/input/misc/Kconfig
@@ -341,6 +341,14 @@ config INPUT_HALLEFFECT_BU52014HV
 
 	  If unsure, say N.
 
+config INPUT_SFH7741
+	tristate "SFH7741 Proximity sensor"
+	help
+	  Say Y here if you want to use proximity sensor sfh7741.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called sfh7741.
+
 config INPUT_PROXIMITY_SFH7743
 	tristate "SFH7743 Proximity"
 	default n
