--- a/arch/arm/configs/android_4430_defconfig
+++ b/arch/arm/configs/android_4430_defconfig
@@ -700,6 +700,7 @@ CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_GPIO=y
 # CONFIG_INPUT_GPIO_ROTARY_ENCODER is not set
 # CONFIG_INPUT_HALLEFFECT_BU52014HV is not set
+CONFIG_INPUT_SFH7741=y
 # CONFIG_INPUT_PROXIMITY_SFH7743 is not set
 
 #
