--- a/drivers/input/misc/Kconfig
+++ b/drivers/input/misc/Kconfig
@@ -349,6 +349,13 @@ config INPUT_SFH7741
 	  To compile this driver as a module, choose M here: the
 	  module will be called sfh7741.
 
+config INPUT_CMA3000_I2C
+	bool "VTI CMA3000 Tri-axis accelerometer"
+	depends on I2C && SYSFS
+	help
+	  Say Y here if you want to use VTI CMA3000 Accelerometer
+	  through I2C interface.
+
 config INPUT_PROXIMITY_SFH7743
 	tristate "SFH7743 Proximity"
 	default n
