--- a/drivers/input/misc/Makefile
+++ b/drivers/input/misc/Makefile
@@ -37,3 +37,4 @@ obj-$(CONFIG_INPUT_KEYCHORD)		+= keychord.o
 obj-$(CONFIG_INPUT_HALLEFFECT_BU52014HV) += bu52014hfv.o
 obj-$(CONFIG_INPUT_PROXIMITY_SFH7743)	+= sfh7743.o
 obj-$(CONFIG_INPUT_SFH7741)		+= sfh7741.o
+obj-$(CONFIG_INPUT_CMA3000_I2C)		+= cma3000_d0x.o cma3000_d0x_i2c.o
