omap4: android-defconfig: sync with menuconfig
No functionality changed, just a defconfig sync with menuconfig

Signed-off-by: Vikram Pandita <vikram.pandita@ti.com>

--- a/arch/arm/configs/android_4430_defconfig
+++ b/arch/arm/configs/android_4430_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.32.9
-# Wed May 12 14:46:41 2010
+# Fri Jul  2 09:05:09 2010
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -209,7 +209,7 @@ CONFIG_ARCH_OMAP4=y
 # CONFIG_OMAP_MUX is not set
 CONFIG_OMAP_MCBSP=y
 CONFIG_OMAP_MBOX_FWK=y
-# CONFIG_OMAP_IOMMU is not set
+CONFIG_OMAP_IOMMU=y
 # CONFIG_OMAP_MPU_TIMER is not set
 CONFIG_OMAP_32K_TIMER=y
 CONFIG_OMAP_32K_TIMER_HZ=128
@@ -228,11 +228,10 @@ CONFIG_OMAP_PM_NOOP=y
 CONFIG_WIFI_CONTROL_FUNC=y
 CONFIG_TIWLAN_SDIO=y
 CONFIG_TIWLAN_MMC_CONTROLLER=5
-# CONFIG_MACH_OMAP_ZOOM3 is not set
 CONFIG_MACH_OMAP_4430SDP=y
-CONFIG_MACH_OMAP_FST_OMAP4_128x=y
-# CONFIG_MACH_OMAP_FST_OMAP4_127x is not set
 CONFIG_ERRATA_OMAP4_AXI2OCP=y
+CONFIG_MACH_OMAP_FST_WL128x=y
+# CONFIG_MACH_OMAP_FST_WL127x is not set
 
 #
 # Processor Type
@@ -262,7 +261,7 @@ CONFIG_ARM_THUMB=y
 CONFIG_HAS_TLS_REG=y
 CONFIG_OUTER_CACHE=y
 CONFIG_CACHE_L2X0=y
-#CONFIG_CACHE_PL310 is not set
+# CONFIG_CACHE_PL310 is not set
 CONFIG_ARM_L1_CACHE_SHIFT=5
 CONFIG_ARCH_HAS_BARRIERS=y
 # CONFIG_ARM_ERRATA_430973 is not set
@@ -783,6 +782,7 @@ CONFIG_I2C_OMAP=y
 # CONFIG_DS1682 is not set
 # CONFIG_SENSORS_TSL2550 is not set
 # CONFIG_SENSORS_PCA963X is not set
+# CONFIG_TWL4030_MADC is not set
 # CONFIG_I2C_DEBUG_CORE is not set
 # CONFIG_I2C_DEBUG_ALGO is not set
 # CONFIG_I2C_DEBUG_BUS is not set
@@ -803,7 +803,6 @@ CONFIG_SPI_OMAP24XX=y
 #
 # CONFIG_SPI_SPIDEV is not set
 # CONFIG_SPI_TLE62X0 is not set
-# CONFIG_OMAP_HSI is not set
 
 #
 # PPS support
@@ -940,7 +939,6 @@ CONFIG_VIDEO_CAPTURE_DRIVERS=y
 # CONFIG_VIDEO_ADV_DEBUG is not set
 # CONFIG_VIDEO_FIXED_MINOR_RANGES is not set
 CONFIG_VIDEO_HELPER_CHIPS_AUTO=y
-# CONFIG_VIDEO_OMAP3_HP3A is not set
 # CONFIG_VIDEO_VIVI is not set
 # CONFIG_VIDEO_CPIA is not set
 # CONFIG_VIDEO_SAA5246A is not set
@@ -948,8 +946,6 @@ CONFIG_VIDEO_HELPER_CHIPS_AUTO=y
 # CONFIG_VIDEO_OMAP_VIDEOOUT is not set
 CONFIG_VIDEO_OMAP3_OUT=y
 # CONFIG_SOC_CAMERA is not set
-# CONFIG_VIDEO_OLDOMAP34XX_ISP_PREVIEWER is not set
-# CONFIG_VIDEO_OLDOMAP34XX_ISP_RESIZER is not set
 CONFIG_RADIO_ADAPTERS=y
 # CONFIG_I2C_SI4713 is not set
 # CONFIG_RADIO_SI4713 is not set
@@ -1009,6 +1005,7 @@ CONFIG_FB_OMAP2=y
 CONFIG_FB_OMAP2_DEBUG_SUPPORT=y
 CONFIG_FB_OMAP2_FORCE_AUTO_UPDATE=y
 CONFIG_FB_OMAP2_NUM_FBS=2
+# CONFIG_FB_OMAP2_32_BPP is not set
 
 #
 # OMAP2/3 Display Device Drivers
@@ -1020,6 +1017,8 @@ CONFIG_PANEL_PICO_DLP=y
 CONFIG_PANEL_TAAL=y
 # CONFIG_PANEL_SHOLES is not set
 # CONFIG_LCD_4430SDP is not set
+# CONFIG_PANEL_NEC is not set
+# CONFIG_PANEL_SIL9022 is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=y
 # CONFIG_LCD_LMS283GF05 is not set
@@ -1033,6 +1032,9 @@ CONFIG_BACKLIGHT_GENERIC=y
 
 #
 # Display device support
+#
+# CONFIG_DISPLAY_SUPPORT is not set
+
 #
 # Console display driver support
 #
@@ -1077,12 +1079,13 @@ CONFIG_SND_ARM=y
 CONFIG_SND_SPI=y
 CONFIG_SND_SOC=y
 CONFIG_SND_OMAP_SOC=y
+CONFIG_OMAP_MCPDM=y
 CONFIG_SND_OMAP_SOC_ABE=y
 CONFIG_SND_OMAP_SOC_SDP4430=y
 CONFIG_SND_OMAP_SOC_HDMI=y
 CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_ALL_CODECS is not set
-CONFIG_SND_SOC_ABE_TWL6030=y
+CONFIG_SND_SOC_ABE_TWL6040=y
 # CONFIG_SOUND_PRIME is not set
 # CONFIG_HID_SUPPORT is not set
 CONFIG_HID=y
@@ -1299,15 +1302,20 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 #
 # CONFIG_RAR_REGISTER is not set
 # CONFIG_IIO is not set
+# CONFIG_OMAP_HSI is not set
 CONFIG_DMM_OMAP=y
 CONFIG_TILER_OMAP=y
 CONFIG_Sys_Link=y
 CONFIG_SYSLINK_PROC=y
 CONFIG_SYSLINK_PROC4430=y
+CONFIG_DUCATI_BASEIMAGE_PHYS_ADDR=0x9CF00000
+CONFIG_SYSLINK_DUCATI_PM=y
 CONFIG_MPU_BRIDGE_NOTIFY=y
 CONFIG_NOTIFY_DUCATI=y
+CONFIG_MPU_SYSLINK_PLATFORM=y
 CONFIG_MPU_SYSLINK_IPC=y
 CONFIG_SYSLINK_USE_SYSMGR=y
+CONFIG_OMAP_IOMMU_DEBUG_MODULE=y
 
 #
 # CBUS support
