--- a/arch/arm/configs/android_zoom3_defconfig
+++ b/arch/arm/configs/android_zoom3_defconfig
@@ -1137,6 +1137,7 @@ CONFIG_I2C_OMAP=y
 # CONFIG_DS1682 is not set
 # CONFIG_SENSORS_TSL2550 is not set
 # CONFIG_SENSORS_PCA963X is not set
+CONFIG_TWL4030_MADC=y
 # CONFIG_I2C_DEBUG_CORE is not set
 # CONFIG_I2C_DEBUG_ALGO is not set
 # CONFIG_I2C_DEBUG_BUS is not set
@@ -1220,6 +1221,7 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_PDA_POWER is not set
 # CONFIG_BATTERY_DS2760 is not set
 # CONFIG_BATTERY_DS2782 is not set
+CONFIG_TWL4030_BCI_BATTERY=y
 # CONFIG_BATTERY_BQ27x00 is not set
 # CONFIG_BATTERY_MAX17040 is not set
 # CONFIG_HWMON is not set
