OMAP4: SGX: Initial support for virtual display
Adds initial support to display a frame split in two panels,
each panel shows a portion of the original framebuffer. This
feature is only available when using the SGX and a 3D
application selects the virtual display as the EGL display

Change-Id: Ia87b9a0091a3c317dca34968d930a86f399424ed
Signed-off-by: Gustavo Diaz Prado <x0083741@ti.com>

--- a/drivers/gpu/pvr/Makefile
+++ b/drivers/gpu/pvr/Makefile
@@ -127,9 +127,15 @@ sgx-y :=  \
 	sgx/mmu.o \
 	sgx/pb.o
 
+sgx_displayclass-y := \
+	display/omap_sgx_displayclass.o \
+	display/omap_display.o
+
 omaplfb-y := \
 	omaplfb/omaplfb_displayclass.o \
 	omaplfb/omaplfb_linux.o
 
 obj-$(CONFIG_SGX540) := pvr_common.o sgx.o omaplfb.o pvr540.o
 obj-$(CONFIG_SGX530) := pvr_common.o sgx.o omaplfb.o pvr530.o
+obj-$(CONFIG_VIRTUAL_DISPLAY_SUPPORT) := pvr_common.o sgx.o \
+	sgx_displayclass.o pvr540.o
