--- a/drivers/gpu/pvr/Kconfig
+++ b/drivers/gpu/pvr/Kconfig
@@ -10,6 +10,33 @@ config SGX530
 	---help---
 	  Support for the PowerVR SGX 3D core.
 
+config VIRTUAL_DISPLAY_SUPPORT
+	tristate "Virtual display support"
+	depends on SGX540
+	---help---
+	  Support for showing one framebuffer split in 2 displays at the same
+	  time. Each display will show a part of the framebuffer by updating
+	  the corresponding overlay on each display. This feature requires
+	  2 framebuffers so CONFIG_FB_OMAP2_NUM_FBS must be 2 and each
+	  framebuffer must be initialized correctly.
+	  The current implementation supports only panels of the same X and Y
+	  resolutions and both panels must have the same bits per pixel values.
+	  This feature is EXPERIMENTAL and might not be stable if power
+	  management is added at the moment.
+	  It is important to give enough memory to FB0 to allow at least
+	  one buffer with twice the height of a normal single display buffer,
+	  so if the panel needs 864x480x4 bytes for one single display buffer
+	  you must give twice the size which is 864x960x4 with the bootargs
+	  omapfb.vram='0:4M'. To enable double buffering you need to give
+	  864x960x4x2 bytes for two buffers, the bootargs should have
+	  omapfb.vram='0:8M'. Since FB1 must also be initialized properly be
+	  sure to left enough memory for one single buffer (864x480x4 bytes).
+	  The bootarg 'vram' must have the FB0 and FB1 memory requirements
+	  combined. Example:
+	  If you want FB0 with 4M (no double buffering) and FB1 with 2M, the
+	  bootargs must have the following:
+	  vram='6M' omapfb.vram='0:4M,1:2M'
+
 choice
 	prompt "SGX revision"
 	depends on SGX530
