SYSLINK:proc-ipc:remove unused files and functions.
This patch does the following cleanup

- Remove unused MMU related files
- Remove DMM related files (this will be moved to iommu)
- Remove Proc start and stop functionality (moved to remoteproc)
- Changes made to platform to not use procmgr_map and unmap calls
- Change made to Notify to not use ducatienabler function

Change-Id: Ib8985883178e396031e04aaa5340138cd8c297f2
Signed-off-by: Hari Kanigeri <h-kanigeri2@ti.com>

--- a/drivers/dsp/syslink/procmgr/proc4430/Kbuild
+++ b/drivers/dsp/syslink/procmgr/proc4430/Kbuild
@@ -1,5 +1,4 @@
-libomap_proc4430 = proc4430.o proc4430_drv.o dmm4430.o \
-		   ducatienabler.o hw_mmu.o
+libomap_proc4430 = proc4430.o proc4430_drv.o
 
 obj-$(CONFIG_SYSLINK_PROC)        += syslink_proc4430.o
 syslink_proc4430-objs = $(libomap_proc4430)
