--- a/arch/arm/plat-omap/Kconfig
+++ b/arch/arm/plat-omap/Kconfig
@@ -191,6 +191,12 @@ config OMAP_RPROC_MEMPOOL_SIZE
 
 config OMAP_IOMMU
 	tristate
+	select GENERIC_ALLOCATOR
+
+config OMAP_IOVMM
+	depends on OMAP_IOMMU
+	select GENERIC_ALLOCATOR
+	tristate
 
 config OMAP_IOMMU_DEBUG
 	depends on OMAP_IOMMU
