SYSLINK: build - update kconfig so iommu is not built as module
This patch allows procmgr to be built as a module without forcing
iommu to be built as a module.  Iommu selection is moved to its
own configuration that selects OMAP_IOMMU by default and procmgr
no longer depends on OMAP_IOMMU.

[Hari] - Amended the patch to remove unused IOMMU_DEBUG config option.

Change-Id: I750b0e076a9a23141e122555d8f0a4027bcec706
Signed-off-by: Angela Stegmaier <angelabaker@ti.com>
Signed-off-by: Hari Kanigeri <h-kanigeri2@ti.com>

--- a/drivers/dsp/syslink/Kconfig
+++ b/drivers/dsp/syslink/Kconfig
@@ -6,8 +6,7 @@ if Sys_Link
 config  SYSLINK_PROC
         tristate "Syslink ProcMgr"
         default y
-	select OMAP_IOMMU
-        help
+	help
            Syslink Proc manager
 
 config  SYSLINK_PROC4430
@@ -65,9 +64,9 @@ config SYSLINK_USE_SYSMGR
         help
           This is the experimental option to enable SYS manager setup
 
-config OMAP_IOMMU_DEBUG_MODULE
-	bool "IOMMU debugging"
-	depends on OMAP_IOMMU
+config SYSLINK_IOMMU_ENABLE
+        bool
+        select OMAP_IOMMU
 	default y
 endif
 
