SYSLINK: build- add a configuration option for recovery
This patch adds a configuration option to syslink Kconfig to
enable fault recovery.

Change-Id: I3c9c50ea83c2bbc664c492e9c13c7fe2c8e676bc
Signed-off-by: Angela Stegmaier <angelabaker@ti.com>

--- a/drivers/dsp/syslink/Kconfig
+++ b/drivers/dsp/syslink/Kconfig
@@ -68,6 +68,11 @@ config SYSLINK_IOMMU_ENABLE
         bool
         select OMAP_IOMMU
 	default y
+
+config SYSLINK_RECOVERY
+        bool "Enable Syslink Fault Recovery"
+	default y
+
 endif
 
 
