devh: omap device handler Kconfig support
This patch adds a configuration option in the syslink Kconfig
file to allow enable/disable of the device handler.

Change-Id: I86c055d7517296afc437c5fc8448b9576eb13d07
Signed-off-by: Angela Stegmaier <angelabaker@ti.com>
Signed-off-by: Hari Kanigeri <h-kanigeri2@ti.com>

--- a/drivers/dsp/syslink/Kconfig
+++ b/drivers/dsp/syslink/Kconfig
@@ -32,6 +32,17 @@ config  SYSLINK_DUCATI_PM
         help
            Ducati Power Management Implementation
 
+config  OMAP_DEVICE_HANDLER
+        tristate "Device Handler"
+        depends on OMAP_IOMMU
+        select OMAP_REMOTE_PROC
+        select MPU_SYSLINK_IPC
+        default y
+        help
+          Select this to enable the Device Handler.  The Device Handler
+          is a module that handles device-specific events.  Events handled
+          include process termination.
+
 config MPU_SYSLINK_PLATFORM
         tristate "Syslink Platform Module"
         default y
