OMAP3: PM: Use generic TRITON power scripts for ZOOM[2,3], 3630SDP board
Adding the power script data for zoom board to TWL4030 platform data.
Updating the sleep/wakeup/warm_reset sequence & resource configuration
from generic script file.

Signed-off-by: Lesly A M <leslyam@ti.com>
Cc: Nishanth Menon <nm@ti.com>
Cc: David Derrick <dderrick@ti.com>
Cc: Samuel Ortiz <sameo@linux.intel.com>
(cherry picked from http://marc.info/?l=linux-omap&m=127797935512282&w=2 )

Conflicts:
	arch/arm/mach-omap2/Makefile
	arch/arm/mach-omap2/board-zoom-peripherals.c

Signed-off-by: Rajeev Kulkarni <rajeevk@ti.com>

--- a/arch/arm/mach-omap2/Makefile
+++ b/arch/arm/mach-omap2/Makefile
@@ -136,7 +136,8 @@ obj-$(CONFIG_MACH_OMAP_ZOOM2)		+= board-zoom2.o \
 					   board-zoom-panel.o \
 					   mmc-twl4030.o \
 					   board-zoom2-wifi.o \
-					   board-zoom-debugboard.o
+					   board-zoom-debugboard.o \
+					   twl4030.o
 obj-$(CONFIG_MACH_OMAP_ZOOM3)		+= board-zoom3.o \
 					   board-zoom-flash.o \
 					   board-zoom-peripherals.o \
@@ -145,11 +146,13 @@ obj-$(CONFIG_MACH_OMAP_ZOOM3)		+= board-zoom3.o \
 					   mmc-twl4030.o \
 					   board-zoom2-wifi.o \
 					   board-zoom-debugboard.o \
-					   board-connectivity.o
+					   board-connectivity.o \
+					   twl4030.o
 obj-$(CONFIG_MACH_OMAP_3630SDP)		+= board-3630sdp.o \
 					   board-zoom-peripherals.o \
 					   board-zoom2-camera.o \
-					   mmc-twl4030.o
+					   mmc-twl4030.o \
+					   twl4030.o
 obj-$(CONFIG_MACH_CM_T35)		+= board-cm-t35.o \
 					   mmc-twl4030.o
 obj-$(CONFIG_MACH_IGEP0020)		+= board-igep0020.o \
