--- a/arch/arm/configs/android_4430_defconfig
+++ b/arch/arm/configs/android_4430_defconfig
@@ -908,7 +908,7 @@ CONFIG_INPUT_GPIO=y
 # CONFIG_INPUT_HALLEFFECT_BU52014HV is not set
 CONFIG_INPUT_SFH7741=y
 CONFIG_INPUT_CMA3000_I2C=y
-# CONFIG_INPUT_HMC5843 is not set
+CONFIG_INPUT_HMC5843=y
 # CONFIG_INPUT_PROXIMITY_SFH7743 is not set
 
 #
