drivers/misc: Add timed output vibrator support
Add initial support for TWL6040 vibrator driver. This implementation
can be plugged directly with Android Vibrator HAL without any changes.

Change-Id: I9942136b7c8916f3a8214686dc0141251d32d08f
Signed-off-by: Dan Murphy <dmurphy@ti.com>

--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -271,6 +271,11 @@ config VIB_GPIO
 	bool "GPIO Vibrator"
 	default n
 
+config TWL6040_VIB
+	bool "TWL6040 Vibrator"
+	depends on TWL4030_CORE
+	default n
+
 config SENSORS_AKM8973
 	tristate "AKM8973 Magnetometer"
 	default n
