--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -37,6 +37,7 @@ obj-$(CONFIG_SENSORS_BMP085)		+= bmp085.o
 obj-$(CONFIG_OMAP_MODEM_CONTROL)	+= omap_mdm_ctrl.o
 obj-y				+= ts27010mux/
 obj-$(CONFIG_VIB_GPIO)		+= vib-gpio.o
+obj-$(CONFIG_TWL6040_VIB)	+= twl6040-vib.o
 obj-$(CONFIG_VIB_OMAP_PWM)	+= vib-omap-pwm.o
 obj-$(CONFIG_WL127X_TEST)	+= wl127x-test.o
 obj-y				+= ti-st/
