OMAP4: 4430: Enable vibrator support in 4430 defconfig
Enable gpio-based vibrator support in OMAP4430 defconfig.

Change-Id: Ia3cf988bdcee7e65f9b00fb5d9de5c72253a15ee
Signed-off-by: Richard Gong <rgong@ti.com>
Signed-off-by: Dan Murphy <dmurphy@ti.com>

--- a/arch/arm/configs/android_4430_defconfig
+++ b/arch/arm/configs/android_4430_defconfig
@@ -545,6 +545,7 @@ CONFIG_ANDROID_PMEM=y
 # CONFIG_KERNEL_DEBUGGER_CORE is not set
 # CONFIG_ISL29003 is not set
 # CONFIG_VIB_GPIO is not set
+CONFIG_TWL6040_VIB=y
 # CONFIG_SENSORS_AKM8973 is not set
 # CONFIG_SENSORS_AKM8973_AKMD is not set
 # CONFIG_SENSORS_LIS331DLH is not set
