--- a/arch/arm/configs/omap2plus_defconfig
+++ b/arch/arm/configs/omap2plus_defconfig
@@ -247,9 +247,10 @@ CONFIG_SND_SOC_TLV320AIC3X=y
 CONFIG_USB=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_SUSPEND=y
-CONFIG_USB_EHCI_HCD=y
+CONFIG_USB_XHCI_HCD=m
+CONFIG_USB_EHCI_HCD=m
 CONFIG_USB_DWC3=m
-CONFIG_USB_MUSB_HDRC=m
+CONFIG_USB_MUSB_HDRC=n
 CONFIG_USB_MUSB_OMAP2PLUS=m
 CONFIG_USB_MUSB_AM35X=m
 CONFIG_USB_MUSB_DSPS=m
