usb: dra7xx: DT: set usb1 to host mode for dra7xx platform
set usb1 to host mode by default for dra7xx platform

Change-Id: I177612b68126e0b5191f358bbb933d7cd20f4550
Signed-off-by: Ravi Babu <ravibabu@ti.com>

--- a/arch/arm/boot/dts/dra7.dtsi
+++ b/arch/arm/boot/dts/dra7.dtsi
@@ -410,7 +410,7 @@
                                 interrupts = <0 76 4>;
                                 usb-phy = <&usb2_phy1>, <&usb3_phy>;
                                 tx-fifo-resize;
-                                dr_mode = "peripheral";
+                                dr_mode = "host";
 				maximum-speed = "superspeed";
                         };
                 };
