arm: omap2plus_defconfig: Enable VPE m2m support
Enabled support for m2m devices
Enabled TI VPE m2m device as module

Change-Id: Ib4e4d93571f48cfa05555226bee00725449ac437
Signed-off-by: Nikhil Devshatwar <nikhil.nd@ti.com>

--- a/arch/arm/configs/omap2plus_defconfig
+++ b/arch/arm/configs/omap2plus_defconfig
@@ -185,6 +185,8 @@ CONFIG_VIDEO_V4L2=m
 CONFIG_VIDEOBUF2_CORE=m
 CONFIG_VIDEOBUF2_MEMOPS=m
 CONFIG_VIDEOBUF2_VMALLOC=m
+CONFIG_V4L_MEM2MEM_DRIVERS=y
+CONFIG_VIDEO_TI_VPE=m
 CONFIG_MEDIA_USB_SUPPORT=y
 CONFIG_USB_VIDEO_CLASS=m
 CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV=y
